Fixed UI alignment bug

--- a/src/less/wolf3d.less
+++ b/src/less/wolf3d.less
@@ -21,7 +21,6 @@ body {
   height : 100%;
 
   background-color : black;
-  text-align : center;
 }
 
 .load-progress {
